# compound_strong_type

./: .bazelrc  .clang-format  .doxygen_config  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: main.yml
src/: BUILD.bazel  compound_unit.h  signature.h
src/helpers/: BUILD.bazel  number.h  number_helper.h  type.h  typelist.h  typelist_impl.h
src/include/ypz/strong_type/: compound_unit.h  signature.h
src/include/ypz/strong_type/helpers/: number.h  type.h  typelist_impl.h
src/src/: compound_unit_impl.h
src/tests/: BUILD.bazel  compound_unit_def.h  compound_unit_examples.h  how_to_use.cpp  test_compound_unit.cpp  test_number_helper.cpp  test_signature.cpp  test_typelist.cpp
toolchains/common/: common.bzl
toolchains/format/: BUILD.bazel  bazel-buildifier.bzl  buildifier_module.bzl  clang-format.bzl  format_all.sh  header_guard.py  header_guard.sh
toolchains/rust/: load_rust.bzl
