###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
#
# Read https://registry.bazel.build/ for the registry center.
###############################################################################

##### Declare the root module #####
module(
    name = "ypz.compound_strong_type",
)
##### end #####

##### Bazel infrastructure #####
bazel_dep(name = "devops.bazel_infrastructure", version = "0.0.0")
git_override(
    module_name = "devops.bazel_infrastructure",
    commit = "c40fd541c82b338dedb8f26b215917c7629ce75b",
    remote = "https://github.com/realypz/devops.bazel_infrastructure.git",
)

#### Google Test #####
bazel_dep(name = "googletest", version = "1.14.0")
##### end #####
