cc_library(
    name = "signature",
    srcs = [],
    hdrs = ["signature.h"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//src/helpers:number",
    ],
)

cc_library(
    name = "compound_unit",
    srcs = [],
    hdrs = [
        "compound_unit.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":signature",
        "//src/helpers:number",
        "//src/helpers:type",
    ],
)
