INCLUDE_DIR = "include/ypz/strong_type/"

cc_library(
    name = "helpers",
    srcs = [],
    hdrs = [
        INCLUDE_DIR + "helpers/type.h",
        INCLUDE_DIR + "helpers/typelist_impl.h",
        INCLUDE_DIR + "helpers/number.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "strong_type",
    srcs = [],
    hdrs = [
        INCLUDE_DIR + "compound_unit.h",
        INCLUDE_DIR + "signature.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":helpers",
    ],
)
