cc_test(
    name = "test_helpers",
    srcs = [
        "test_number_helper.cpp",
        "test_typelist.cpp",
    ],
    deps = [
        "//src/helpers:number",
        "//src/helpers:type",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_compound_unit",
    srcs = [
        "compound_unit_examples.h",
        "how_to_use.cpp",
        "test_compound_unit.cpp",
    ],
    deps = [
        "//src:compound_unit",
        "@googletest//:gtest_main",
    ],
)
