cc_test(
    name = "test_helpers",
    srcs = [
        "test_number_helper.cpp",
        "test_typelist.cpp",
    ],
    deps = [
        "//src:helpers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_strong_type",
    srcs = [
        "compound_unit_def.h",
        "how_to_use.cpp",
        "test_compound_unit.cpp",
    ],
    deps = [
        "//src:strong_type",
        "@googletest//:gtest_main",
    ],
)
