load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("//toolchains/format:clang-format.bzl", "clang_format_check")
load("//toolchains/format:bazel-buildifier.bzl", "bazel_buildifier")

clang_format_check(
    name = "clang_format_fix",
    mode = "fix",
)

clang_format_check(
    name = "clang_format_diff",
    mode = "diff",
)

bazel_buildifier(
    name = "bazel_buildifier_fix",
    mode = "fix",
)

bazel_buildifier(
    name = "bazel_buildifier_check",
    mode = "check",
)
